# kubectl-mtv

./: .containerignore  .gitignore  .krew.yaml  Containerfile  Gemfile  Makefile  README.md  README_demo.md  README_inventory.md  README_planvms.md  README_quary_language.md  README_vddk.md  _config.yml  go.mod  go.sum  index.md  install.sh  kubectl-mtv.spec  mcp-tools-listing.txt  options.txt
_includes/: custom-head.html  head.html  head_custom.html  nav_footer_custom.html
cmd/: archive.go  cancel.go  cmd_test.go  create.go  cutover.go  delete.go  describe.go  get.go  inventory.go  kubectl-mtv.go  mapping.go  plan.go  provider.go  root.go  start.go  unarchive.go  vddk.go  version.go
deploy/: mcp-route.yaml  mcp-server.yaml  olsconfig-patch.yaml
docs/: README-development.md  README-install.md  README-usage.md  README_convertor_scheduling.md  README_create_mappings.md  README_demo.md  README_hooks.md  README_host_creation.md  README_inventory.md  README_kubernetes_token.md  README_mapping_pairs.md  (+11 more)
e2e/mcp/: Makefile  README.md  conftest.py  env.example  pyproject.toml
e2e/mcp/auth/: test_auth.py
e2e/mcp/dryrun/: test_dry_run.py  test_show_cli.py
e2e/mcp/health/: test_check.py
e2e/mcp/hosts/: test_create.py  test_read.py
e2e/mcp/inventory/: test_read.py
e2e/mcp/mappings/: test_read.py
e2e/mcp/plans/: test_create.py  test_read.py
e2e/mcp/providers/: test_create.py  test_read.py
e2e/mcp/scripts/: lib.sh  server-start-image.sh  server-start.sh  server-status.sh  server-stop-image.sh  server-stop.sh
e2e/mcp/setup/: test_banner.py  test_setup.py
(+536 files in other folders)
